--- a/trilha-dotnet.csproj
+++ b/trilha-dotnet.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>trilha_dotnet</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>desable</Nullable>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
